--- a/package.json
+++ b/package.json
@@ -9,15 +9,17 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@formspree/react": "^2.4.1",
     "@types/react-router-dom": "^5.3.3",
     "bootstrap": "^5.2.3",
-    "fslightbox-react": "^1.7.2",
+    "jquery": "^3.6.4",
+    "lightbox2": "^2.11.4",
     "node-sass": "^8.0.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.2",
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
-    "react-id-swiper": "^4.0.0",
+    "react-input-mask": "^2.0.4",
     "react-router-dom": "^6.9.0",
     "sass": "^1.58.3",
     "swiper": "^9.1.1"
